--- a/bin/df/df.1
+++ b/bin/df/df.1
@@ -1,4 +1,4 @@
-.\"	$NetBSD: df.1,v 1.46.6.1 2018/08/28 13:21:42 martin Exp $
+.\"	$NetBSD: df.1,v 1.46 2016/08/10 23:48:14 sevan Exp $
 .\"
 .\" Copyright (c) 1989, 1990, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -29,7 +29,7 @@
 .\"
 .\"	@(#)df.1	8.2 (Berkeley) 1/13/92
 .\"
-.Dd August 27, 2018
+.Dd August 10, 2016
 .Dt DF 1
 .Os
 .Sh NAME
@@ -37,8 +37,8 @@
 .Nd display free disk space
 .Sh SYNOPSIS
 .Nm
-.Op Fl agln
-.Op Fl Ghkm | Fl ihkm | Fl Pk
+.Op Fl agklmn
+.Op Fl G | Fl i | Fl P
 .Op Fl t Ar type
 .Op Ar file | Ar file_system ...
 .Sh DESCRIPTION
