--- a/bin/test/test.1
+++ b/bin/test/test.1
@@ -1,4 +1,4 @@
-.\"	$NetBSD: test.1,v 1.30 2016/08/12 03:17:41 sevan Exp $
+.\"	$NetBSD: test.1,v 1.28 2012/12/16 17:57:49 wiz Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -32,7 +32,7 @@
 .\"
 .\"     @(#)test.1	8.1 (Berkeley) 5/31/93
 .\"
-.Dd August 12, 2016
+.Dd December 16, 2012
 .Dt TEST 1
 .Os
 .Sh NAME
@@ -275,7 +275,7 @@ True if either
 .Ar expression1
 or
 .Ar expression2
-is true.
+are true.
 .It Cm \&( Ar expression Cm \&)
 True if
 .Ar expression
@@ -313,11 +313,6 @@ The
 utility implements a superset of the
 .St -p1003.2
 specification.
-.Sh HISTORY
-A
-.Nm
-utility appeared in
-.At v7 .
 .Sh CAVEATS
 The
 .Nm
