--- a/sbin/newfs_msdos/newfs_msdos.8
+++ b/sbin/newfs_msdos/newfs_msdos.8
@@ -1,4 +1,4 @@
-.\" $NetBSD: newfs_msdos.8,v 1.23 2017/02/17 09:29:35 wiz Exp $
+.\" $NetBSD: newfs_msdos.8,v 1.20 2014/04/24 23:49:40 christos Exp $
 .\"
 .\" Copyright (c) 1998 Robert Nordier
 .\" All rights reserved.
@@ -27,7 +27,7 @@
 .\"
 .\" From: $FreeBSD: src/sbin/newfs_msdos/newfs_msdos.8,v 1.13 2001/08/14 10:01:48 ru Exp $
 .\"
-.Dd February 16, 2017
+.Dd April 24, 2014
 .Dt NEWFS_MSDOS 8
 .Os
 .Sh NAME
@@ -57,7 +57,6 @@
 .Op Fl o Ar hidden
 .Op Fl r Ar reserved
 .Op Fl s Ar total
-.Op Fl T Ar timestamp
 .Op Fl u Ar track-size
 .Ar special
 .Op Ar disktype
@@ -75,9 +74,9 @@ to determine geometry, if required.
 The options are as follow:
 .Bl -tag -width indent
 .It Fl N
-Do not create a file system: just print out parameters.
+Don't create a file system: just print out parameters.
 .It Fl @ Ar offset
-Build the file system at the specified offset in bytes in the device or file.
+Build the filesystem at the specified offset in bytes in the device or file.
 A suffix s, k, m, g (lower or upper case)
 appended to the offset specifies that the
 number is in sectors, kilobytes, megabytes or gigabytes, respectively.
@@ -121,7 +120,7 @@ Sectors per cluster.
 Acceptable values are powers of 2 in the range 1 through 128.
 If the block or cluster size are not specified, the code
 uses a cluster between 512 bytes and 32K depending on
-the file system size.
+the filesystem size.
 .It Fl e Ar dirents
 Number of root directory entries (FAT12 and FAT16 only).
 .It Fl f Ar format
@@ -148,13 +147,6 @@ Number of hidden sectors.
 Number of reserved sectors.
 .It Fl s Ar total
 File system size.
-.It Fl T At timestamp
-Specify a timestamp to be used for file system creation so that
-it can be consistent for reproducible builds.
-The timestamp can be a pathname, where the timestamps are derived from
-that file, a parseable date for parsedate(3) (this option is not
-yet available in the tools build), or an integer value interpreted
-as the number of seconds from the Epoch.
 .It Fl u Ar track-size
 Number of sectors per track.
 .El
@@ -182,7 +174,7 @@ option.
 When the geometry is not available, it is assumed to be
 63 sectors, 255 heads.
 The size is then rounded to become
-a multiple of the track size and avoid complaints by some file system code.
+a multiple of the track size and avoid complaints by some filesystem code.
 .Pp
 FAT file system parameters occupy a "Boot Sector BPB (BIOS Parameter
 Block)" in the first of the "reserved" sectors which precede the actual
@@ -241,10 +233,6 @@ Exit status is 0 on success and 1 on error.
 .Xr fdisk 8 ,
 .Xr newfs 8
 .Sh HISTORY
-A
-.Nm
-utility appeared in
-.Fx 3.0 .
 The
 .Nm
 command first appeared in
